Changes
=======

Next (?)
--------

- A bug preventing GCPs from being created with new BufferedDatasetWriter
  instances (#1600) has been fixed (#1610).
- A previously unreported bug preventing BufferedDatasetWriters from being
  opened in r+ mode has been fixed.

1.0.15 (2019-01-27)
-------------------

- Google cloud storage support was *not* in fact added in 1.0.14, but is
  present in 1.0.15.

1.0.14 (2019-01-22)
-------------------

- The _CRS class has been refactored so that a WKT representation, rather than
  PROJ4 representation, is the canonical form. This resolves issues #1397 and
  #1587 specifically, and an entire category of issues discussed in
  https://rasterio.groups.io/g/dev/message/68.
- Native support for Google Cloud Storage using "gs://" URLs has been added
  (#1577).
- On entering a dataset context (DatasetBase.__enter__) a new anonymous GDAL
  environment is created if needed and is entered. This makes `with
  rasterio.open(...) as dataset:` roughly equivalent to `with
  rasterio.open(...) as dataset, Env():`. This helps prevent bugs when datasets
  are created and then used later or are used in different scopes.

1.0.13 (2018-12-14)
-------------------

- Fix a buffer dttype mismatch on Windows introduced in 1.0.12 (#1579).

1.0.12 (2018-12-10)
-------------------

- Rasterio's lower level I/O functions now take Py_ssize_t index arrays and
  will raise exceptions for type mismatches instead of swallowing the
  exceptions (#1076).
- The _boundless_vrt_doc function's background layer no longer needs an
  in-memory dataset and the performance regression noted in #1499 has been
  reversed. We've also found a performance improvement in masked boundless
  reads in the case that the source data is entirely valid.
- The signature of the private _boundless_vrt_doc function in rasterio.vrt has
  changed. Its background keyword argument now takes an int or float, a new
  masked keyword argument has been added, and the function returns a unicode